--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         </section>
         <nav class="navigation">
           <ul>
-              <li><a class="custom-btn" href="https://quper.notion.site/Code-Style-HTML-6cabd2a939ad42f086410779e18a1066" target="_blank">HTML Code Style</a></li>
-              <li><a class="custom-btn" href="https://quper.notion.site/Code-Style-CSS-5021e31124f8489a9bce3a7097e99858" target="_blank">CSS Code Style</a></li>
+              <li><a class="custom-btn" href="/codestylehtml.html" target="_blank">HTML Code Style</a></li>
+              <li><a class="custom-btn" href="/codestylecss.html" target="_blank">CSS Code Style</a></li>
           </div>
         </nav>
     </main>
     
     <footer>
-        <p>Страницу сверстал <a href="https://t.me/ludens_m">Даниил Меликов</a></p>
+        <p>Сверстал <a href="https://t.me/ludens_m">Даниил Меликов</a></p>
     </footer>
 </body>
 </html>
