edit body width

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
+<div class="wrapper">
 <body>
   <header>
     <h1>Code Styles от MethEd</h1>
@@ -24,9 +25,9 @@
           </div>
         </nav>
     </main>
-    
     <footer>
-        <p>Сверстал <a href="https://t.me/ludens_m">Даниил Меликов</a></p>
+      <p>Сверстал <a href="https://t.me/ludens_m">Даниил Меликов</a></p>
     </footer>
 </body>
+</div>
 </html>
